2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: fixed a bug where, when asked for only one time constant, nothing would happen.
	* relaxtime_fun.m: same.

2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: added.  This function uses non-linear least squares fitting procedures to compute any number of time constants for creep-relaxation data.  A Kelvin-Voight model was used for equation construction.
	* relaxtime_fun.m: added.  contains the fitting function for relaxation_time.m.

2005-04-14  Jeremy Cribb <jcribb@email.unc.edu>
	* VE_fluid_model:  removed warning for dividing by zero.  

2005-03-31  Jeremy Cribb <jcribb@email.unc.edu>
	* cone_and_plate:  added this folder for cone_and_plate specific rheology code.

2004-11-04  Jeremy Cribb <jcribb@email.unc.edu>
	* sucrose_viscosity.m:  added the ability to input temperature in Celsius and Kelvin.

2004-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* driven_bead: added.  contains code for running and analyzing driven bead microrheology experiments.

2004-10-23  Jeremy Cribb <jcribb@email.unc.edu>
	* sucrose_viscosity.m: changed the exceeded solubility condition to a warning instead of an error.


2004-10-14  Jeremy Cribb <jcribb@email.unc.edu>
	* Added sucrose_viscosity.m, which models a sucrose solution's viscosity given inputs of concentration in mol/L and temperature in degrees Celsius.  References for this model are given in the code.


2004-09-01  Jeremy Cribb <jcribb@email.unc.edu>
	* Added VE_fluid_model.m, which models a simple Viscoelastic fluid model (combined Maxwell and Kelvin-Voight).


2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version
