@@ -1,7 +1,7 @@
 function v = kkr(file, bead_radius)
 % 3DFM function
 % Rheology
-% Last modified on 07/28/2003
+% Last modified on 05/29/2005
 %
 % This function computes the Kramers-Kronig Relation on the bead position
 % vectors (normally the imaginary compliance for rheology datasets)
@@ -16,8 +16,8 @@ function v = kkr(file, bead_radius)
 % 07/28/2003 - expanded help, updated to load_vrpn_tracking 
 %              (from load_matlab_tracking)
 % 05/07/2003 - updated to handle new version of load_vrpn_tracking; jcribb
+% 06/29/2005 - updated to handle 'f'ast or 's'low algorithm.
 %
-
 
 % First, we need to load our dataset.  Do this using load_vrpn_tracking,
 % then compute PSD with a rectangular window.
@@ -26,11 +26,11 @@ d = vrpn_psd(d, [], 'rectangle');
 
 % Now, we need to condition the PSD's we get, so that there's
 % not as much frequency resolution in the higher decades
-[w psd] = sampleKKR(d.psd.f, d.psd.xyz);
+[w psd] = sampleKKR(d.psd.f, d.psd.r);
 
 % The next step is to get the Rheology from this dataset
 App   = App(w, psd);
-Ap    = evaluateKK(w, App);
+Ap    = evaluateKK(w, App, 'f');
 Astar = Ap + j*App;
 Gstar = 1./(Astar * 6*pi*bead_radius);
 Gp    = real(Gstar);
